# dumpall

./: README.md  pyproject.toml  requirements.txt
dumpall/: __init__.py  __version__.py  dumper.py
dumpall/addons/: autodumper.py  dsdumper.py  gitdumper.py  hgdumper.py  idxdumper.py  svndumper.py
tests/: __init__.py  test_autodumper.py
