[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dumpall"
version = "0.4.0"
description = "A source code and information disclosure dumper for .git, .hg, .svn, .DS_Store, and directory indexes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [
    { name = "HJK", email = "HJKdev@gmail.com" },
]
dependencies = [
    "aiohttp>=3.9.5",
    "aiohttp_proxy>=0.1.2",
    "aiomultiprocess>=0.9.0",
    "click>=8.1.7",
    "pyquery>=2.0.0",
]

[project.scripts]
dumpall = "dumpall:main"

[tool.setuptools]
packages = ["dumpall", "dumpall.addons", "dumpall.thirdparty"]

[tool.setuptools.package-data]
dumpall = ["data/user-agents-from-seclists.txt"]
